--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ install:
         gcc-c++
         pkg-config
         cmake
-        make;
+        make
+        perl;
 
     `# Android` ;
     git clone https://github.com/staticlibs/android-ndk-r9d-arm-linux-androideabi-4.8.git ../android-ndk ;
