win64 build fix

--- a/resources/openssl_cmake/CMakeLists.txt
+++ b/resources/openssl_cmake/CMakeLists.txt
@@ -472,6 +472,9 @@ elseif ( ${PROJECT_NAME}_TOOLCHAIN MATCHES "[^_]+_amd64_[^_]+" )
     openssl_asm_compile ( ${${PROJECT_NAME}_LOOKASIDE_DIR}/crypto/sha/asm/sha1-x86_64.pl )
     openssl_asm_compile ( ${${PROJECT_NAME}_LOOKASIDE_DIR}/crypto/sha/asm/sha1-mb-x86_64.pl )
     openssl_asm_compile ( ${${PROJECT_NAME}_LOOKASIDE_DIR}/crypto/sha/asm/sha256-mb-x86_64.pl )
+    if ( ${PROJECT_NAME}_TOOLCHAIN MATCHES "windows_amd64_[^_]+" )
+        openssl_asm_compile ( ${${PROJECT_NAME}_LOOKASIDE_DIR}/crypto/sha/asm/sha512-x86_64.pl )
+    endif ( )
 elseif ( ${PROJECT_NAME}_TOOLCHAIN MATCHES "android_[^_]+_gcc" )
     openssl_asm_compile ( ${${PROJECT_NAME}_LOOKASIDE_DIR}/crypto/sha/asm/sha1-armv4-large.pl )
     openssl_asm_compile ( ${${PROJECT_NAME}_LOOKASIDE_DIR}/crypto/sha/asm/sha256-armv4.pl )
